--- a/signup.html
+++ b/signup.html
@@ -1,5 +1,4 @@
-
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8">
@@ -32,11 +31,11 @@
       }
     </style>
     <!-- Custom styles for this template -->
-    <link href="/css/style.css" rel="stylesheet">
+    <link href="/style.css" rel="stylesheet">
   </head>
   <body class="text-center">
     <form action="/" class="form-signin" method="POST">
-        <img class="mb-4" src="/image/site-logo.png" alt="" style="width:inherit;">
+        <img class="mb-4" src="/site-logo.png" alt="" style="width:inherit;">
         <h1 class="h3 mb-3 font-weight-normal">Sign up to my Newsletter!</h1>
         <label for="inputEmail" class="sr-only">Email address</label>
         <input type="text" class="form-control top" name="firstname" placeholder="FirstName" required>
